UI fixes for gwt host page
1. fixed white space between masthead and navbar
2. fixed mast head overlapping

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1769306

--- a/frontend/brands/ovirt-brand/src/main/sass/_common_base.scss
+++ b/frontend/brands/ovirt-brand/src/main/sass/_common_base.scss
@@ -25,10 +25,8 @@ landing page (welcome), login (sso), docs, 404, etc
 }
 
 .nav-pf-vertical, .nav-pf-secondary-nav, .nav-pf-tertiary-nav {
-    /* 60 is the current PatternFly default. That assumes a navbar-pf-vertical height of
-       2px, but we use 4px: 60px + (4px - 2px) = 62px
-    */
-    top: 62px;
+    /* 60 is the current PatternFly default */
+    top: 60px;
 }
 
 .navbar-pf-vertical .nav .drawer-pf-trigger .drawer-pf-trigger-icon {
